Upgrade Quarkus to 3.7.0.CR1